fixed responsive footer email and best selling product description overflow w/ footer

--- a/best-selling.css
+++ b/best-selling.css
@@ -167,20 +167,20 @@ button {
 /* product text */
 #product-description {
     width: 55%;
-    /* border: 2px solid palevioletred; */
-    /* overflow-y: auto; */
     padding: 2em;
 }
 
 /* comment */
 #product-details {
-    /* border: #007355 1px solid; */
+    border: #0073543d 2px solid;
     width: 100%;
     height: auto;
     /* change to viewport */
-    max-height: 58vw;
+    max-height: 58vw; 
     overflow-y: auto;
     margin: 15px 0;
+    padding: 10px;
+    border-radius: 4px;
 }
 
 /* justify to page */
@@ -396,11 +396,10 @@ ul {
 
     /* span one column */
     #product-description {
-        width: 100%;
+        width: 90%;
         height: 930px;
-        /* border: 2px solid palevioletred; */
-        padding-left: 3.5em;
         text-transform: capitalize;
+        padding: 11rem 0 0 3.5rem;
     }
 
     #product-description h6 {
@@ -412,10 +411,7 @@ ul {
     #product-details {
         /* border: #007355 1px solid; */
         width: 100%;
-        height: auto;
-        /* change to viewport */
-        max-height: 110vw;
-        overflow-y: auto;
+        max-height: 80vw;
     }
 
     /* shrink to screen */
@@ -431,10 +427,15 @@ ul {
 
 
 /* smaller */
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 600px) {
+    /* font size relative to others */
+    #product-description p {
+        font-size: 11px;
+    }
+
     /* shorten lengthy text */
     #product-details {
-        max-height: 120vw;
+        max-height: 90vw;
     }
 
     /* cut whitespace */
@@ -447,7 +448,7 @@ ul {
 @media screen and (max-width: 450px) {
     /* shorten lengthy text */
     #product-details {
-        max-height: 155vw;
+        max-height: 120vw;
     }
 
     /* cut whitespace */
