--- a/home.css
+++ b/home.css
@@ -15,25 +15,23 @@ h1 {
 
 /* sub default to match theme */
 h2 {
-    font-size:46px;
+    font-size: 46px;
     line-height: 54px;
+    /* font-size: 27px;
+    line-height: 32px; */
     color: #007355;
 }
 
 /* sub default to match theme */
 h3 {
-    font-size: 38;
-    line-height: 50px;
+    font-size: 25px;
+    line-height: 30px;
     color: #007355;
 }
 
 /* sub default to match theme */
 h4 {
-    font-size: 20px;
-    /* -webkit-text-stroke-color: black; */
-    -webkit-text-stroke-width: 0.7px;
-    /* color: palevioletred; */
-    /* color: whitesmoke; */
+    font-size: size 20px;
 }
 
 /* sub default to match theme */
@@ -46,17 +44,17 @@ h6 {
 p {
     font-size: 16px;
     margin: 15px 0 20px 0;
-    /* color: #fff; */
     color: #007355;
 }
 
+/* take up full screen */
 body {
     width: 100%;
 }
 
 
 
-/* header */
+/* ------header------ */
 
 /* nav links */
 #header {
@@ -100,7 +98,7 @@ body {
 #navbar li a {
     text-decoration: none;
     font-size: 1em;
-    font-weight: 600px;
+    font-weight: 600;
     color: black;
     transition: 0.3 ease; 
 }
@@ -137,29 +135,33 @@ body {
 
 
 
-/* hero section */
+/* ------hero section------ */
+/* main img */
 #hero {
     background-image: url("img/hero.png");
-    height: 72vh;
+    height: 70vh;
     width: 100%;
     background-size: cover;
     background-position: top 25% right 0;
-    padding: 0 80px;
+
+    padding: 0 5rem;
     display: flex; /* by default in row */ 
     flex-direction: column;
+    position: relative;
+
+
+    /* align-items: center;
+    justify-content: flex-start; */
     align-items: flex-start;
     justify-content: center;
-
-    position: relative;
 }
 
 /* outline text to standout from background img */
 #sales-text {
-    padding: 2rem;
-    background-color:rgba(255, 255, 255, 0.7);
-    border-radius: 4px;
-    color: #007355;
-    position: relative;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 1rem 2rem 1rem 1rem;
+    border-radius: 8px;
 }
 
 /* space before button */
@@ -168,18 +170,21 @@ body {
     text-transform: capitalize;
 }
 
+#sales-text > h2 {
+    color: black;
+}
+
 /* side promo */
 #promo-text {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 5px;
-    border-radius: 7px;
+    border-radius: 8px;
     text-transform: capitalize;
     /* position separate form other text */
     position: absolute;
     right: 0;
     bottom: 0;
     margin: 0 3rem 3rem 0;
-    color: #007355;
     flex-wrap: wrap;
 }
 
@@ -187,15 +192,18 @@ body {
 #hero button {
     display: inline-block;
     border-radius: 4px;
-    color: #007355;
     background-color: white;
+    color: black;
     border: none;
     text-align: center;
     font-size: 1.6rem;
     padding: 1.6rem;
     transition: all 0.5s;
     cursor: pointer;
+    border: gray 1px solid;
 }
+
+/* ------interactive shop button------  */
 
 /* indicate button */
 #hero button span {
@@ -285,7 +293,7 @@ body {
     overflow: hidden;
 }
 
-/* toggle heart icon, material icons */
+/* ------toggle heart icon, material icons------ */
 
 /* place heart on top of img */
 .heart-tag, .heart-tag1 {
@@ -348,7 +356,7 @@ button {
     text-transform: capitalize;
     overflow: hidden;
     float: left;
-    color: #007355;
+    color: #007354b7;
 }
 
 /* pattern price */
@@ -356,7 +364,7 @@ button {
     font-weight: 700;
     font-size: 17px;
     float: right;
-    color: #007355;
+    color: #007354b7;
 }
 
 /* discounted price, if needed */
@@ -368,14 +376,17 @@ button {
 
 /* navigate next, slider */
 .toggle-img button{
+    /* border: black solid 1px; */
     height: 40px;
     width: 40px;
     position: absolute; 
     display: flex; 
     justify-content: center; 
     top: 50%;  /* center to img */
+    /* background-color: #007355; */
 }
 
+/* nxt and pre */
 .pre-btn,
 .nxt-btn {
     border: none;
@@ -410,7 +421,7 @@ button {
 }
 
 
-/* footer */
+/* -----footer----- */
 
 /* block */
 footer {
@@ -429,10 +440,16 @@ footer {
     padding: 3rem;
 }
 
+/* icons: phone and email */
+.footer-col:nth-child(4){
+    font-size: 1rem;
+}
+
 /* titles */
 .title {
     color: #007355;
     font-size: 24px;
+    line-height: 2rem;
 }
 
 /* keep text color theme */
@@ -443,13 +460,12 @@ footer {
 /* align to column */
 #socials {
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
 }
 
 /* organize like header */
 #socials li {
     list-style: none;
-    padding: 0 20px;
     position: relative;
 }
 
@@ -458,9 +474,11 @@ ul {
     list-style: none; 
 }
 
-/* change case */
+/* last column */
+#phone-number,
 #email{
     text-transform: lowercase;
+    font-size: 0.95rem;
 }
 
 
@@ -468,15 +486,9 @@ ul {
 @media (max-width: 799px){
     /* promo-text */
     h2 {
-        font-size: 20px;
-        /* font-size: 27px; */
-        line-height: 22px;
-        /* line-height: 32px; */
+        font-size: 27px;
+        line-height: 32px;
         color: #007355;
-    }
-
-    h4 {
-        font-size: 14px;
     }
 
     /* position right */
@@ -524,48 +536,61 @@ ul {
         display: initial;
         position: absolute;
         top: 30px;
-        left: 30px;
+        left: 30ppx;
         color: black;
         font-size: 24px;
+    }
+
+    /* position side of hero img */
+    #sales-text {
+        margin-right: 3rem;
     }
 
     /* account for spacing below */
     #sales-text > h4 {
         padding-bottom: 10px;
         text-transform: capitalize;
+        font-size: 12px;
+        line-height: 15px;
+        width: 80px;
+    }
+
+    #sales-text > h2 {
+        color: black;
+        font-size: 20px;
+        line-height: 20px;
+        padding-bottom: 5px;
     }
 
     /* side promo */
     #promo-text {
-        padding: 5px;
-        border-radius: 7px;
         font-size: 13px;
-        /* position separate form other text */
-        position: absolute;
-        margin-bottom: 27rem;
-        margin-right: 3rem;
-        right: 0;
-        bottom: 0;
-        /* wrap text */
-        max-width: 170px;
+    }
+
+    #hero {
+        padding: 0 1.25rem; 
+        height: 50vh;
+        background-position: top 80% right 10%;
     }
 
     /* shop now button */
     #hero button {
+        display: inline-block;
+        border-radius: 4px;
+        background-color: white;
+        border: none;
+        text-align: center;
         font-size: 1rem;
         padding: 1rem;
+        transition: all 0.5s;
+        cursor: pointer;
+        width: 5rem;
+        border: gray 1px solid;
     }
 
     /* don't include in side bar */
     #lg-bag {
         display: none;
-    }
-
-    /* hero section */
-    #hero {
-        height: 50vh;
-        padding: 0 80px;
-        background-position: top 30% right 30%;
     }
 
     .product-category {
@@ -574,13 +599,9 @@ ul {
 
     /* entire div */
     #sales-text {
+        /* border: #007355 2px solid; */
         width: 40%;
-    }
-
-    /* entire div */
-    #sales-text > h4 {
-        font-size: 15px;
-        /* font-size: 25px; */
+        padding: 1rem 7rem 1rem 1rem;
     }
 
     /* dynamic */
@@ -615,13 +636,8 @@ ul {
 
     /* side promo */
     #promo-text {
-        /* margin-bottom: 30rem; */
         border-radius: 7px;
-        /* font-size: 9px; */
+        font-size: 9px;
         max-width: 100px;
-        /* max-width: 100px; */
-        /* margin-right: 1rem; */
-        right: 0;
-        bottom: 0;
     }
 }
